# kanban-board

./: .gitignore  README.md  pyproject.toml
kanban_board/: app.py
kanban_board/utils/: __init__.py  _logger.py  _validation.py  config.json
